tests/ui/generic-associated-types/issue-74684-1.stderr
error[E0597]: `a` does not live long enough
  --> $DIR/issue-74684-1.rs:13:26
   |
LL | fn bug<'a, T: ?Sized + Fun<F<'a> = [u8]>>(_ : Box<T>) -> &'static T::F<'a> {
   |        -- lifetime `'a` defined here
LL |     let a = [0; 1];
   |         - binding `a` declared here
LL |     let _x = T::identity(&a);
   |              ------------^^-
   |              |           |
   |              |           borrowed value does not live long enough
   |              argument requires that `a` is borrowed for `'a`
...
LL | }
   | - `a` dropped here while still borrowed

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0597`.
